minio/minio-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
spec:
  type: LoadBalancer
  selector:
    app: minio
  ports:
    - port: 9090
      name: console
    - port: 9000
      name: s3
